--- a/GoogleMapsExample/Views/Home/About.cshtml
+++ b/GoogleMapsExample/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
 
             $.each(data, function (key, value) {
                 var option = $('<option />').val(value.ID).text(value.Nome);
-                $("#dropDownDest").append(option);
+                $("#ddlInstructors").append(option);
             });
         });
     })();
@@ -131,7 +131,7 @@
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Instrutor:</label>
-        <select id="dropDownDest"></select>
+        <select id="ddlInstructors"></select>
     </div>
     <div class="form-group">
         <label for="exampleInputFile">Date</label>
