--- a/GoogleMapsExample/Views/Home/Index.cshtml
+++ b/GoogleMapsExample/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Instrutor:</label>
-        <select id="dropDownDest"></select>
+        <select id="ddlInstructors"></select>
     </div>
     <div class="form-group">
         <label for="exampleInputFile">Date</label>
